@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.snowday"
-    android:versionCode="120"
-    android:versionName="1.0.5">
+    android:versionCode="130"
+    android:versionName="1.0.6">
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.CAMERA" android:required="true" />
