@@ -3,13 +3,14 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <string name="hello_blank_fragment">Lorem ipsum dolor sit amet. And the quick brown fox jumped over the fence.</string>
+    <string name="hello_blank_fragment">Keep checking to see if there are any updates to the snow situation.</string>
     <string name="blank_text"></string>
     <string name="str_see_more">See More</string>
     <string name="str_check">Check</string>
     <string name="str_hero_text"/>
+    <string name="str_no_updates">No Updates at this time</string>
 
     <string name="snowday_question">What are the chances for a snow day?</string>
-    <string name="snowday_dash_text2">The quick brown fox jumped over the lazy dog. There is chance for snow in the upcoming days as per the weather service update.</string>
+    <string name="snowday_dash_text2">There is chance for snow in the upcoming days from the latest weather service updates.</string>
     <string name="snowday_snack">It\'s Snowing</string>
 </resources>
